[package]
name = "maru"
version = "0.1.0"
edition = "2024"

[dependencies]
git2 = "0.18"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
egui = "0.27"
eframe = "0.27"
rfd = "0.14"
webbrowser = "0.8"
chrono = { version = "0.4", features = ["serde"] }